main.css
h1 {
    font-family: georgia;
    text-align: center;
    color: #172121;
}

h2 {
    font-weight: bold;
    font-family: georgia;
    font-size: 18px;
    color: #172121;
    text-align: center;
    padding-bottom: 2%;
}

h3 {
    font-weight: normal;
    font-family: georgia;
    font-size: 16px;
    margin: 0;
    text-align: center;
    color: #172121;
}

h4 {
    font-family: georgia;
    font-size: 16px;
    color: #172121;
    text-align: center;
}

h5 {
    font-family: georgira;
    font-weight: normal;
    font-size: 18px;
    display: flex;
}

h6 {
    text-align: center;
    font-family: georgia;
    font-style: italic;
    font-size: 14px;
}

p {
    font-family: georgia;
    color: #172121;
    margin-left: 4%;
    margin-right: 4%;
}

figcaption {
    font-family: sans-serif;
    font-size: 12px
}

.col {
    display: flex;
    background-color: #BFACB5;
    border-style: solid;
    border-color: #7F7B82;
    border-width: thin;
    justify-content: center;
    max-width: 75%;
}

.container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

img {
    padding-top: 4%;
    padding-bottom: 4%;
    max-width: 50%;
    height: auto;
}

body {
    display: flex;
    background-color: #444554;
    padding-left: 6%;
    padding-right: 6%;
    padding-bottom: 4%;
    padding-top: 4%;
}

.information {
    display: flex;
    flex-direction: column;
    background-color: #E5D0CC;
    border-style: solid;
    border-color: #7F7B82;
    padding-left: 4%;
    padding-right: 4%;
    padding-bottom: 4%;
}

